[tool.poetry]
name = "rasant-api"
version = "0.1.0"
# ...


[tool.poetry]
name = "rasant-api"
version = "0.1.0"
description = "Shopee UTM → ShortLink + Predict + CAPI + TikTok"
authors = ["luizalto <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# API / Server
fastapi = "0.110.3"
uvicorn = "0.29.0"

# HTTP / Util
requests = "2.31.0"
python-multipart = "0.0.9"

# Storage / Queue
google-cloud-storage = "2.16.0"
redis = "5.0.3"

# ML (inferência)
catboost = "1.2.5"
pandas = "2.2.2"
scikit-learn = "1.4.2"
numpy = "1.26.4"
scipy = "1.11.4"
joblib = "1.5.2"
xgboost = "3.0.5"   # ← mesma versão usada no treino

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"




